Add archive filter, notification for coSupervisor
