# server/service/ProfessorService.js
@@ -100,12 +100,14 @@ exports.getProfessorById = function (professorId) {
 
 exports.getInternalCoSupervisorByThesisProposalId = function (thesisProposalId) {
   return new Promise(function (resolve, reject) {
-    const sql = "SELECT internalCoSupervisorId FROM thesisProposal_internalCoSupervisor_bridge WHERE thesisProposalId = ?";
+    const sql = "SELECT internalCoSupervisorId, email FROM thesisProposal_internalCoSupervisor_bridge, professors WHERE thesisProposalId = ? AND thesisProposal_internalCoSupervisor_bridge.internalCoSupervisorId = professors.professorId";
     db.all(sql, [thesisProposalId], function (err, rows) {
       if (err) {
         reject(new PromiseError({ code: 500, message: "Internal Server Error" }));
       } else {
-        resolve(rows);
+        let cosupervisors = rows.map((r) => ({ coSupervisorId: r.internalCoSupervisorId, email: r.email }));
+
+        resolve(cosupervisors);
       }
     });
   });
